--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 		 <meta charset="utf-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		 <meta http-equiv="x-ua-compatible" content="ie=edge">
-		 <title>My App</title>
+		 <title>Anoop Mundathan</title>
      <style>
         html {
           font-size: 16px;
